--- a/index.html
+++ b/index.html
@@ -6,4 +6,4 @@
     <h1>Welcome to My Web Page</h1>
     <p>This is a simple web page created for VLE-3 Lab .</p>
 </body>         
-</html>
+</html><p>Updated version</p>
